--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
@@ -17,6 +18,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "jsqr": "^1.4.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
@@ -25,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "serialize-javascript": "^6.0.2",
+    "short-unique-id": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
