--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toolpad/core": "^0.13.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
